--- a/src/components/atoms/inputs/index.module.scss
+++ b/src/components/atoms/inputs/index.module.scss
@@ -1,7 +1,8 @@
 .input {
   :global {
     .ant-input {
-      border: 1px solid #db2e2e;
+      border: 1px solid #eee4e4;
+      margin: 10px 0px;
     }
   }
 }
