room list has been edited.

--- a/src/components/atoms/buttons/index.module.scss
+++ b/src/components/atoms/buttons/index.module.scss
@@ -3,7 +3,7 @@
     .ant-btn {
       background-color: #219ebc;
       color: white;
-      border-radius: 0px 15px 15px 15px;
+      border-radius: 0 0.938rem 0.938rem 0.938rem;
       &:hover {
         border: 1px solid #15729e;
       }
