--- a/src/components/atoms/cards/index.module.scss
+++ b/src/components/atoms/cards/index.module.scss
@@ -1,13 +1,25 @@
 .card {
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   background: rgba(253, 254, 255, 0.68);
   border-radius: 0px 20px 0px 20px;
   box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
+
+  :global {
+    .ant-card-body {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding-top: 2rem;
+      padding-bottom: 0;
+    }
+  }
+
+  .content {
+    flex-grow: 1;
+  }
 
   .steps {
     margin-bottom: 16px;
@@ -29,12 +41,9 @@
   }
 
   .cardActions {
-    margin-top: auto;
     display: flex;
-    justify-content: flex-start;
-  }
-
-  .cardButton {
-    width: 100%;
+    justify-content: flex-end;
+    margin-top: auto;
+    padding-bottom: 16px;
   }
 }
