--- a/src/components/atoms/inputs/index.module.scss
+++ b/src/components/atoms/inputs/index.module.scss
@@ -1,6 +1,7 @@
 .input {
   :global {
     .ant-input {
+      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
       border: 1px solid #eee4e4;
       margin: 10px 0px;
     }
