--- a/src/components/atoms/selects/index.module.scss
+++ b/src/components/atoms/selects/index.module.scss
@@ -2,6 +2,7 @@
   :global {
     .ant-select {
       width: 100%;
+      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
       &::after {
         overflow: auto;
         max-width: max-content;
