rooms design has been edited.

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,5 +10,11 @@ body {
     background: white;
     width: 90%;
     margin: auto;
+    .content {
+      background: white;
+    }
+    .footer {
+      background: white;
+    }
   }
 }
