--- a/src/components/organisms/room/index.module.scss
+++ b/src/components/organisms/room/index.module.scss
@@ -10,17 +10,15 @@
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   padding: 16px;
-  width: calc(
-    33.33% - 16px
-  ); // Display three cards per row, adjusting for the gap
+  width: calc(33.33% - 16px);
   box-sizing: border-box;
 
   @media (max-width: 1024px) {
-    width: calc(50% - 16px); // Two cards per row on smaller screens
+    width: calc(50% - 16px);
   }
 
   @media (max-width: 768px) {
-    width: calc(100% - 16px); // One card per row on mobile screens
+    width: calc(100% - 16px);
   }
 }
 
@@ -46,16 +44,16 @@
       color: black;
       padding: 10px;
       border-left: 3px solid rgb(31, 185, 193);
-      background-color: #f5f6f7; // Light gray background
-      border-radius: 4px; // Rounded corners for the background
+      background-color: #f5f6f7;
+      border-radius: 4px;
       margin-bottom: 5px;
-      white-space: normal; // Allow text to wrap normally
-      overflow: visible; // Allow text to be fully visible
-      text-overflow: initial; // No truncation
+      white-space: normal;
+      overflow: visible;
+      text-overflow: initial;
       font-size: 14px;
 
       &:last-child {
-        margin-bottom: 0; // Remove margin on the last comment
+        margin-bottom: 0;
       }
     }
   }
@@ -66,6 +64,7 @@
     padding: 8px;
     background-color: white;
     margin-bottom: 8px;
+    width: 100%;
   }
 
   .buttonContainer {
