--- a/src/components/organisms/room/index.module.scss
+++ b/src/components/organisms/room/index.module.scss
@@ -2,7 +2,7 @@
   margin: 2rem 0;
   display: flex;
   flex-wrap: wrap;
-  gap: 16px; // Adjust the spacing between the step cards
+  gap: 16px;
 }
 
 .stepCard {
